--- a/name.html
+++ b/name.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script>
         // کلید رمزنگاری (همان کلید در پیج اول)
-        const secretKey = "d5F3kG8tH9iP3jQ7lM5vW9bX2zB4cD1x";
+        const secretKey = "J7$%Gx*W8k@P!zL9fV3#bR6yT1mC&Q2n";
 
         // آدرس صفحه اول
         const allowedReferer = "https://tnxi.github.io/rapins/name.html";
