--- a/name.html
+++ b/name.html
@@ -14,7 +14,7 @@
 
         function redirectToLink() {
             if (isInKodularWebView()) {
-                var encodedLink = "https://imoviee.com";
+                var encodedLink = "aHR0cHM6Ly90bnhpLmdpdGh1Yi5pby9yYXBpbnMvbmFtZS5odG1s";
                 var link = atob(encodedLink);
                 window.location.href = link;
             }
