--- a/name.html
+++ b/name.html
@@ -1,26 +1,1 @@
-<html>
-<head>
-    <script type="text/javascript">
-        function isInKodularWebView() {
-            var ua = navigator.userAgent || navigator.vendor || window.opera;
-            if (/Android/i.test(ua) && ua.includes("wv")) {
-                return true;
-            }
-            else {
-                window.location.href = "about:blank"; 
-                return false;
-            }
-        }
-
-        function redirectToLink() {
-            if (isInKodularWebView()) {
-                var encodedLink = "aHR0cHM6Ly90bnhpLmdpdGh1Yi5pby9yYXBpbnMvbmFtZS5odG1s";
-                var link = atob(encodedLink);
-                window.location.href = link;
-            }
-        }
-    </script>
-</head>
-<body onload="redirectToLink()">
-</body>
-</html>
+<html><head><script type="text/javascript">function isInKodularWebView(){var n=navigator.userAgent||navigator.vendor||window.opera;return!(!/Android/i.test(n)||!n.includes("wv"))||!(window.location.href="about:blank")}function redirectToLink(){if(isInKodularWebView()){var n=atob("aHR0cHM6Ly90bnhpLmdpdGh1Yi5pby9yYXBpbnMvbmFtZS5odG1s");window.location.href=n}}</script></head><body onload="redirectToLink()"></body></html>
